[project]
name = "agenteproduccion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.0a2",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0a7",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.26",
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]